<resources>
    <string name="app_name">App پشتیبانی</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">ورود</string>
    <string name="user_name_hint">نام کاربری</string>
    <string name="password_hint">رمز عبور</string>
    <string name="login_title">App پشتیبانی</string>
    <string name="search_item_title">جستجو</string>
    <string name="center_name_hint">لطفا نام مرکز را وارد کنید</string>
    <string name="ok">تایید</string>
    <string name="cancel">انصراف</string>
</resources>