<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.CenterNameDialogFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginRight="16dp"
            android:hint="@string/center_name_hint"
            android:textColorHint="@color/yellow"
            app:boxStrokeColor="@color/yellow"
            app:hintTextColor="@color/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_text_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textDirection="anyRtl" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextField">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="32dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/dark_navy_blue"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/dark_navy_blue"
                android:text="@string/ok" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>